--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "mahjong",
+    "name": "mahjong-web",
+    "version": "1.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -20,6 +21,7 @@
         "autoprefixer": "^10.4.2",
         "buffer": "^6.0.3",
         "classnames": "^2.3.1",
+        "generate-license-file": "^1.3.0",
         "lil-gui": "^0.16.1",
         "next": "^12.1.0",
         "postcss": "^8.4.8",
@@ -29,7 +31,7 @@
         "react-icons": "^4.4.0",
         "react-tracked": "^1.7.8",
         "react-transition-group": "^4.4.2",
-        "socket.io-client": "^4.4.1",
+        "socket.io-client": "^4.5.1",
         "tailwindcss": "^3.0.23",
         "three": "^0.138.3"
     },
@@ -37,6 +39,7 @@
         "@types/node": "^17.0.21",
         "eslint": "^8.11.0",
         "eslint-config-next": "^12.1.0",
+        "ts-node": "^10.8.2",
         "typescript": "^4.6.2"
     }
 }
