--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-icons": "^4.4.0",
         "react-tracked": "^1.7.8",
         "react-transition-group": "^4.4.2",
+        "react-unity-webgl": "^9.0.3",
         "socket.io-client": "^4.5.1",
         "tailwindcss": "^3.0.23",
         "three": "^0.138.3"
