--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "autoprefixer": "^10.4.2",
         "buffer": "^6.0.3",
         "classnames": "^2.3.1",
+        "copy-to-clipboard": "^3.3.1",
         "generate-license-file": "^1.3.0",
         "lil-gui": "^0.16.1",
         "next": "^12.1.0",
@@ -34,7 +35,8 @@
         "react-unity-webgl": "^9.0.3",
         "socket.io-client": "^4.5.1",
         "tailwindcss": "^3.0.23",
-        "three": "^0.138.3"
+        "three": "^0.138.3",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@types/node": "^17.0.21",
