--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "react-dom": "^17.0.2",
         "react-event-listener": "^0.6.6",
         "react-icons": "^4.4.0",
-        "react-tracked": "^1.7.8",
+        "react-resize-detector": "^7.1.2",
         "react-transition-group": "^4.4.2",
         "socket.io-client": "^4.5.1",
         "tailwindcss": "^3.0.23",
