--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "copy-to-clipboard": "^3.3.1",
         "lil-gui": "^0.16.1",
         "next": "^12.1.0",
+        "pixi-projection": "^0.4.4",
         "pixi.js": "^6.5.1",
         "postcss": "^8.4.8",
         "react": "^17.0.2",
