Latest broken state

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mahjong-web",
+    "name": "mahjong",
     "version": "1.0",
     "private": true,
     "scripts": {
@@ -9,48 +9,48 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@types/animejs": "^3.1.7",
-        "@types/css-font-loading-module": "^0.0.8",
-        "@types/react": "^18.2.20",
-        "@types/react-dom": "^18.2.7",
-        "@types/three": "^0.155.0",
-        "animejs": "^3.2.1",
+        "@types/animejs": "^3.1.12",
+        "@types/css-font-loading-module": "^0.0.13",
+        "@types/react": "^18.3.2",
+        "@types/react-dom": "^18.3.0",
+        "@types/three": "^0.164.0",
+        "animejs": "^3.2.2",
         "argparse": "^2.0.1",
-        "autoprefixer": "^10.4.15",
+        "autoprefixer": "^10.4.19",
         "buffer": "^6.0.3",
-        "classnames": "^2.3.2",
+        "classnames": "^2.5.1",
         "copy-to-clipboard": "^3.3.3",
-        "express": "^4.18.2",
-        "express-session": "^1.17.3",
-        "framer-motion": "^10.16.0",
-        "http-proxy-middleware": "^2.0.6",
-        "lil-gui": "^0.18.2",
-        "moment": "^2.29.4",
+        "express": "^4.19.2",
+        "express-session": "^1.18.0",
+        "framer-motion": "^11.2.4",
+        "http-proxy-middleware": "^3.0.0",
+        "lil-gui": "^0.19.2",
+        "moment": "^2.30.1",
         "monk": "^7.3.4",
-        "next": "^13.4.19",
-        "postcss": "^8.4.28",
+        "next": "^14.2.3",
+        "postcss": "^8.4.38",
         "prompts": "^2.4.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-icons": "^4.10.1",
-        "react-resize-detector": "^9.1.0",
-        "socket.io": "^4.7.2",
-        "socket.io-client": "^4.7.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.2.1",
+        "react-resize-detector": "^10.0.1",
+        "socket.io": "^4.7.5",
+        "socket.io-client": "^4.7.5",
         "stats.js": "^0.17.0",
-        "tailwindcss": "^3.3.3",
-        "three": "^0.155.0",
-        "uuid": "^9.0.0"
+        "tailwindcss": "^3.4.3",
+        "three": "^0.164.1",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
-        "@types/argparse": "^2.0.10",
-        "@types/express": "^4.17.17",
-        "@types/express-session": "^1.17.7",
-        "@types/node": "^20.5.1",
-        "@types/prompts": "^2.4.4",
-        "@types/uuid": "^9.0.2",
-        "sucrase": "^3.34.0",
-        "ts-node": "^10.9.1",
+        "@types/argparse": "^2.0.16",
+        "@types/express": "^4.17.21",
+        "@types/express-session": "^1.18.0",
+        "@types/node": "^20.12.12",
+        "@types/prompts": "^2.4.9",
+        "@types/uuid": "^9.0.8",
+        "sucrase": "^3.35.0",
+        "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.1.6"
+        "typescript": "^5.4.5"
     }
 }
